--- a/prova_01_dev_web/index.html
+++ b/prova_01_dev_web/index.html
@@ -11,7 +11,7 @@
     <hr>
     <h1>Seja bem-vindo ao porta do milhão</h1>
     <i>
-    <p><b>OLÁ CARO JOGADOR, VOCÊ MISTERIOSAMENTE FOI CONVOCADO PARA A SELEÇÃO DA PORTA AO MILHÃO, ESSE JOGO CONTÊM 10 PERGUNTAS, CADA PERGUNTA POSSUI UMA VERDADEIRA E UMA FALSA, CASO SUA ALTERNATIVA SEJA FALSA VOCÊ ESTÁ ELIMINADO, CASO VERDADEIRA VOCÊ PROSSEGUIRÁ ATÉ CHEGAR NA PORTA DO MILHÃO ESSE MILHÃO VOCÊ SÓ IRÁ SABER LÁ!</b></p>
+    <p><b>OLÁ CARO JOGADOR, VOCÊ MISTERIOSAMENTE FOI CONVOCADO PARA A SELEÇÃO DA PORTA AO MILHÃO, ESSE JOGO CONTÊM 10 PERGUNTAS, CADA PERGUNTA POSSUI UMA VERDADEIRA E DUAS FALSAS, CASO SUA ALTERNATIVA SEJA FALSA VOCÊ SOFRERÁ UM CASTIGO E PODERÁ TENTAR NOVAMENTE, CASO VERDADEIRA VOCÊ PROSSEGUIRÁ ATÉ CHEGAR NA PORTA DO MILHÃO ESSE MILHÃO VOCÊ SÓ IRÁ SABER LÁ!</b></p>
     <p><mark>BOA SORTE, QUE OS JOGOS COMECEM, HAHAHAHAH!!!</mark></p>
     </i>
     <hr>
