--- a/prova_01_dev_web/perguntas/perg_7.html
+++ b/prova_01_dev_web/perguntas/perg_7.html
@@ -9,14 +9,14 @@
     <center>
         <h1>Sétima Pergunta!!</h1>
     
-        <h4>7.</h4>
-        Resposta =>
+        <h4>7. O que é computador?</h4>
+        Máquina de voltar no tempo =>
         <a href="../resposta_falsa\perg_7_falsa.html">
         <img src="../images/porta-de-madeira11-fa6ce5ee04ed2e50fc16896869769016-1024-1024.png" alt="" width="200px"></a>
-        Resposta =>
+        Máquina de escrever =>
         <a href="../resposta_falsa\perg_7_falsa.html">
         <img src="../images/porta-de-madeira11-fa6ce5ee04ed2e50fc16896869769016-1024-1024.png" alt="" width="200px"></a>
-        Resposta =>
+        O que faz cálculos =>
         <a href="perg_8.html">
         <img src="../images/porta-de-madeira11-fa6ce5ee04ed2e50fc16896869769016-1024-1024.png" alt="" width="200px"></a>
         <hr>
