--- a/prova_01_dev_web/perguntas/perg_9.html
+++ b/prova_01_dev_web/perguntas/perg_9.html
@@ -9,14 +9,14 @@
     <center>
         <h1>Nona Pergunta!!</h1>
     
-        <h4>9.</h4>
-        Resposta =>
+        <h4>9. O que significa Teste de Turing</h4>
+        É testar uma capacidade da memória ram =>
         <a href="../resposta_falsa\perg_9_falsa.html">
         <img src="../images/porta-de-madeira11-fa6ce5ee04ed2e50fc16896869769016-1024-1024.png" alt="" width="200px"></a>
-        Resposta =>
+        <textarea rows="10">é um experimento para avaliar a capacidade de uma máquina de exibir comportamento inteligente indistinguível do de um ser humano</textarea> =>
         <a href="perg_10.html">
         <img src="../images/porta-de-madeira11-fa6ce5ee04ed2e50fc16896869769016-1024-1024.png" alt="" width="200px"></a>
-        Resposta =>
+        é um experimento que busca validar o desempenho do computador =>
         <a href="../resposta_falsa\perg_9_falsa.html">
         <img src="../images/porta-de-madeira11-fa6ce5ee04ed2e50fc16896869769016-1024-1024.png" alt="" width="200px"></a>
         <hr>
