--- a/prova_01_dev_web/resposta_falsa/perg_1_falsa.html
+++ b/prova_01_dev_web/resposta_falsa/perg_1_falsa.html
@@ -6,6 +6,14 @@
     <title>RPG</title>
 </head>
 <body>
-    
+    <center>
+        <hr>
+        <h1>NÃO PASSOU DO COMEÇO? AQUI NÃO TERÁ CASTIGO</h1>
+        <img src="../images/lord-jesus-christ.gif" style="border: 5px;" alt=""> 
+        <hr>
+        <a href="../" style="text-decoration: none;">
+        <h2>Apenas clique aqui e tente novamente! (Amém)</h2>
+        </a>
+    </center>
 </body>
 </html>
