--- a/prova_01_dev_web/resposta_falsa/perg_7_falsa.html
+++ b/prova_01_dev_web/resposta_falsa/perg_7_falsa.html
@@ -6,6 +6,14 @@
     <title>RPG</title>
 </head>
 <body>
-    
+    <center>
+        <hr>
+        <h1>VOCÊ ESTÁ ME DEVENDO 15 REAIS NO PIX</h1>
+        <img src="../images/rampar-vendedores.gif" title="PIX: 47988071571" style="border: 5px;" alt=""> 
+        <hr>
+        <a href="../perguntas/perg_7.html" style="text-decoration: none;">
+        <h2>Clique aqui para tentar novamente!</h2>
+        </a>
+    </center>
 </body>
 </html>
