--- a/prova_01_dev_web/resposta_falsa/perg_5_falsa.html
+++ b/prova_01_dev_web/resposta_falsa/perg_5_falsa.html
@@ -12,7 +12,7 @@
         <img src="../images/rtx-6000-og.jpg" style="border: 5px;" alt="">
         <h2><mark>E O SEU PREJUÍZO FOI DE 61 MIL REAIS !</mark></h2>
         <hr>
-        <a href="../perguntas/perg_5.html" style="text-decoration: none;">
+        <a href="../" style="text-decoration: none;">
         <h2>Clique aqui para tentar novamente!</h2>
         </a>
     </center>
