--- a/prova_01_dev_web/resposta_falsa/perg_3_falsa.html
+++ b/prova_01_dev_web/resposta_falsa/perg_3_falsa.html
@@ -11,7 +11,7 @@
         <h1>QUE AZAR, VOCÊ TEVE QUE PROGRAMAR EM JAVA</h1>
         <img src="../images/KSnus.gif" style="border: 5px;" alt=""> 
         <hr>
-        <a href="../perguntas/perg_3.html" style="text-decoration: none;">
+        <a href="../" style="text-decoration: none;">
         <h2>Clique aqui para tentar novamente!</h2>
         </a>
     </center>
