--- a/prova_01_dev_web/resposta_falsa/perg_9_falsa.html
+++ b/prova_01_dev_web/resposta_falsa/perg_9_falsa.html
@@ -11,7 +11,7 @@
     <h1>OH NÃO, VOCÊ CAIU NO PENHASCO!</h1>
     <img src="../images/99c9ef9612d49514c8fe2dfbee87bb5a.gif" style="border: 5px;" alt=""> 
     <hr>
-    <a href="../perguntas/perg_9.html" style="text-decoration: none;">
+    <a href="../" style="text-decoration: none;">
     <h2>Clique aqui para tentar novamente!</h2>
     </a>
 </center>
