--- a/prova_01_dev_web/perguntas/perg_4.html
+++ b/prova_01_dev_web/perguntas/perg_4.html
@@ -7,6 +7,20 @@
     <title>RPG</title>
 </head>
 <body>
-    <H1>Quarta Pergunta</H1>
+    <center>
+        <h1>Quarta Pergunta!!!</h1>
+    
+        <h4>4.Que ano foi criado o primeiro computador </h4>
+        (1963) =>
+        <a href="../resposta_falsa\perg_3_falsa.html">
+        <img src="../images/porta-de-madeira11-fa6ce5ee04ed2e50fc16896869769016-1024-1024.png" alt="" width="200px"></a>
+        (1943) =>
+        <a href="../resposta_falsa\perg_3_falsa.html">
+        <img src="../images/porta-de-madeira11-fa6ce5ee04ed2e50fc16896869769016-1024-1024.png" alt="" width="200px"></a>
+        (1946) =>
+        <a href="perg_5.html">
+        <img src="../images/porta-de-madeira11-fa6ce5ee04ed2e50fc16896869769016-1024-1024.png" alt="" width="200px"></a>
+        <hr>
+        </center>
 </body>
 </html>
