--- a/prova_01_dev_web/perguntas/perg_4.html
+++ b/prova_01_dev_web/perguntas/perg_4.html
@@ -10,7 +10,7 @@
     <center>
         <h1>Quarta Pergunta!!!</h1>
     
-        <h4>4.Que ano foi criado o primeiro computador </h4>
+        <h4>4.Que ano foi criado o primeiro computador?</h4>
         (1963) =>
         <a href="../resposta_falsa\perg_4_falsa.html">
         <img src="../images/porta-de-madeira11-fa6ce5ee04ed2e50fc16896869769016-1024-1024.png" alt="" width="200px"></a>
