--- a/prova_01_dev_web/perguntas/perg_6.html
+++ b/prova_01_dev_web/perguntas/perg_6.html
@@ -7,9 +7,10 @@
 </head>
 <body>
     <center>
+        <hr>
         <h1>Sexta Pergunta!!</h1>
     
-        <h4>6.Capital da alemanha ocidental</h4>
+        <h4>6.Capital da alemanha ocidental?</h4>
         Berlim =>
         <a href="../resposta_falsa\perg_6_falsa.html">
         <img src="../images/porta-de-madeira11-fa6ce5ee04ed2e50fc16896869769016-1024-1024.png" alt="" width="200px"></a>
