--- a/prova_01_dev_web/resposta_falsa/perg_2_falsa.html
+++ b/prova_01_dev_web/resposta_falsa/perg_2_falsa.html
@@ -8,7 +8,7 @@
 <body>
     <center>
         <hr>
-        <h1>INFELIZMENTE SEU NAVIO AFUNDOU COM VOCÊ DENTRO APÓS ERRAR UMA PERGUNTA</h1>
+        <h1>INFELIZMENTE SEU NAVIO AFUNDOU COM VOCÊ DENTRO APÓS ERRAR ESTÁ PERGUNTA</h1>
         <img src="../images/960d8d194c9c8bfaa406e9a8dfbe181a.gif" style="border: 5px;" alt=""> 
         <hr>
         <a href="../" style="text-decoration: none;">
