--- a/prova_01_dev_web/resposta_falsa/perg_4_falsa.html
+++ b/prova_01_dev_web/resposta_falsa/perg_4_falsa.html
@@ -9,7 +9,7 @@
     <center>
         <hr>
         <h1>VOCÊ FOI ATACADO!!!</h1>
-        <img src="../images/fnaf-foxy.gif" style="border: 5px;" alt=""> 
+        <img src="../images/fnaf-foxy.gif" style="border: 5px;" width="500px" height="450px" alt=""> 
         <hr>
         <a href="../" style="text-decoration: none;">
         <h2>Clique aqui para tentar novamente!</h2>
