--- a/prova_01_dev_web/perguntas/perg_2.html
+++ b/prova_01_dev_web/perguntas/perg_2.html
@@ -13,7 +13,7 @@
         <hr>
         <H1>Segunda Pergunta!!!</H1>
 
-        <P>Quais países participavam da aliança Eixo, na segunda guerra mundial!</P>
+        <h4>Quais países participavam da aliança Eixo, na segunda guerra mundial!</h4>
             França, Reino Unido e Japão =>
             <a href="../resposta_falsa/perg_2_falsa.html">
             <img src="../images/porta-de-madeira11-fa6ce5ee04ed2e50fc16896869769016-1024-1024.png" width="300" alt=""></a>
