--- a/prova_01_dev_web/index.html
+++ b/prova_01_dev_web/index.html
@@ -17,7 +17,7 @@
     <hr>
     <h2>Para começarmos vamos para pergunta do número 1 da PORTA AO MILHÃO!</h2>
 
-    <h4>1. Dada a proposição P(p,q) = ~p&q, sabendo que p é verdadeiro e q falso, qual valor lógico final, determine: </h4>
+    <h4>1. Dado a proposição P(p,q) = ~p&q, sabendo que p é verdadeiro e q falso, qual valor lógico final, determine: </h4>
     F =>
     <a href="perguntas/perg_2.html">
     <img src="images/porta-de-madeira11-fa6ce5ee04ed2e50fc16896869769016-1024-1024.png" alt="" width="200px"></a>
