--- a/prova_01_dev_web/perguntas/perg_3.html
+++ b/prova_01_dev_web/perguntas/perg_3.html
@@ -11,7 +11,7 @@
     <hr>
     <h1>Terceira Pergunta!!!</h1>
 
-    <h4>3. Conhecendo um pouco sobre álgebra de boole sabemos que o número booleano são:</h4>
+    <h4>3. Conhecendo um pouco sobre álgebra de boole sabemos que o símbolo booleano são:</h4>
     (2 , 6) =>
     <a href="../resposta_falsa\perg_3_falsa.html">
     <img src="../images/porta-de-madeira11-fa6ce5ee04ed2e50fc16896869769016-1024-1024.png" alt="" width="200px"></a>
