--- a/prova_01_dev_web/perguntas/perg_8.html
+++ b/prova_01_dev_web/perguntas/perg_8.html
@@ -9,14 +9,14 @@
     <center>
         <h1>Oitava Pergunta!!</h1>
     
-        <h4>8.</h4>
-        Resposta =>
+        <h4>8.Qual é a escrita da estrutura condicional</h4>
+        If Else =>
         <a href="perg_9.html">
         <img src="../images/porta-de-madeira11-fa6ce5ee04ed2e50fc16896869769016-1024-1024.png" alt="" width="200px"></a>
-        Resposta =>
+        For =>
         <a href="../resposta_falsa\perg_8_falsa.html">
         <img src="../images/porta-de-madeira11-fa6ce5ee04ed2e50fc16896869769016-1024-1024.png" alt="" width="200px"></a>
-        Resposta =>
+        While =>
         <a href="../resposta_falsa\perg_8_falsa.html">
         <img src="../images/porta-de-madeira11-fa6ce5ee04ed2e50fc16896869769016-1024-1024.png" alt="" width="200px"></a>
         <hr>
