--- a/prova_01_dev_web/perguntas/perg_10.html
+++ b/prova_01_dev_web/perguntas/perg_10.html
@@ -9,14 +9,14 @@
     <center>
         <h1>Décima Pergunta!!</h1>
     
-        <h4>10.</h4>
-        Resposta =>
+        <h4>10. Qual o valor de mercado da Microsoft</h4>
+        2.32 Trilhões =>
         <a href="../resposta_falsa\perg_10_falsa.html">
         <img src="../images/porta-de-madeira11-fa6ce5ee04ed2e50fc16896869769016-1024-1024.png" alt="" width="200px"></a>
-        Resposta =>
+        982.56 Bilhões =>
         <a href="../resposta_falsa\perg_10_falsa.html">
         <img src="../images/porta-de-madeira11-fa6ce5ee04ed2e50fc16896869769016-1024-1024.png" alt="" width="200px"></a>
-        Resposta =>
+        3.11 Trilhões =>
         <a href="vitoria_premio.html">
         <img src="../images/porta-de-madeira11-fa6ce5ee04ed2e50fc16896869769016-1024-1024.png" alt="" width="200px"></a>
         <hr>
