--- a/prova_01_dev_web/perguntas/perg_2.html
+++ b/prova_01_dev_web/perguntas/perg_2.html
@@ -15,10 +15,10 @@
 
         <P>Quais países participavam da aliança Eixo, na segunda guerra mundial!!!!</P>
             França, Reino Unido e Japão =>
-            <a href="/resposta_falsa/Resposta_falsa.html">
+            <a href="../resposta_falsa/perg_2_falsa.html">
             <img src="../images/porta-de-madeira11-fa6ce5ee04ed2e50fc16896869769016-1024-1024.png" width="300" alt=""></a>
             Alemanha, Itália e União Soviética =>
-            <a href="/resposta_falsa/Resposta_falsa.html">
+            <a href="../resposta_falsa/perg_2_falsa.html">
             <img src="../images/porta-de-madeira11-fa6ce5ee04ed2e50fc16896869769016-1024-1024.png" width="300" alt=""></a>
             Alemanha, Itália e Japão =>
             <a href="perg_3.html">
