--- a/prova_01_dev_web/resposta_falsa/perg_6_falsa.html
+++ b/prova_01_dev_web/resposta_falsa/perg_6_falsa.html
@@ -6,6 +6,15 @@
     <title>RPG</title>
 </head>
 <body>
+    <center>
+        <hr>
+        <h1>CORRA!!!!!</h1>
+        <img src="../images/giphy.gif" style="border: 5px;" alt=""> 
+        <hr>
+        <a href="../" style="text-decoration: none;">
+        <h2>Entre aqui e fuja!!!!</h2>
+        </a>
+    </center>
     
 </body>
 </html>
