--- a/prova_01_dev_web/resposta_falsa/perg_8_falsa.html
+++ b/prova_01_dev_web/resposta_falsa/perg_8_falsa.html
@@ -6,6 +6,14 @@
     <title>RPG</title>
 </head>
 <body>
-    
+    <center>
+        <hr>
+        <h1>VOCÊ ENTROU NUMA BATALHA DE POKEMON E INFELIZMENTE VOCÊ PERDEU PARA ELE!</h1>
+        <img src="../images/ratata.gif" title="PIX: 47988071571" style="border: 5px;" alt=""> 
+        <hr>
+        <a href="../" style="text-decoration: none;">
+        <h2>Clique aqui para tentar novamente!</h2>
+        </a>
+    </center>
 </body>
 </html>
